@@ -1,3 +1,3 @@
 MAJOR=2016
-MINOR=8
+MINOR=10
 BUILD=0
